--- a/teaching/s2020_dg1.html
+++ b/teaching/s2020_dg1.html
@@ -41,6 +41,8 @@
 2019-09-18: Announcement -- Student groups for group presentation, <a href="f2019_dg2/groups.pdf" title="Student groups">PDF</a>. Be sure to check your email inbox.<br>
 2019-09-14: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 -->
+2020-05-23: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>
+2020-05-23: Youtube videos Sessions 34, 35, 36, 37 will be available on May 24th 23:59. Find links for video recordings from CBNU eCampus.<br>
 2020-05-14: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>
 2020-05-14: Youtube videos Sessions 30, 31, 32, 33 will be available on May 17th 23:59. Find links for video recordings from CBNU eCampus.<br>
 2020-05-14: Youtube videos Sessions 26, 27, 28, 29 are available now. Find links for video recordings from CBNU eCampus. Please send attendace emails by May 21st 15:00 (Late emails accepted with no disadvantage).<br>
@@ -93,6 +95,10 @@ Problems from the National Exam: <a href="s2020_dg1/hw6.pdf" title="Selected pro
 <b>Homework  #7</b>  11 problems. Due Date: May 28th.<br>
 Problems from Chapter 7 (Part 1): #2, 3, 4, 8, 15<br>
 Problems from the National Exam: <a href="s2020_dg1/hw7.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
+
+<b>Homework  #8</b>  11 problems. Due Date: June 4th.<br>
+Problems from Chapter 7 (Part 2): #12, 14, 19, 21, 23, 28, 29<br>
+Problems from the National Exam: <a href="s2020_dg1/hw8.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
 <!-- HW6 <br> -->
 
 
