--- a/teaching/s2020_geom1.html
+++ b/teaching/s2020_geom1.html
@@ -55,9 +55,9 @@
 
 
 
-
-
-2020-05-18: Youtube videos Sessions 10-1, 10-2, 10-3 will be  available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
+2020-05-23: Youtube videos Sessions 11-1, 11-2, 11-3 will be available on May 25th at 15:00. Find links for video recordings from CBNU eCampus.<br>
+2020-05-23: <FONT COLOR="red">Homework #10</FONT> has been posted below.<br>
+2020-05-18: Youtube videos Sessions 10-1, 10-2, 10-3 will be available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
 2020-05-18: <FONT COLOR="red">Homework #10</FONT> has been posted below.<br>
 2020-05-11: Youtube videos Sessions 9-1, 9-2, 9-3 will be  available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
 2020-05-11: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br>
@@ -158,11 +158,13 @@ Exercises in p.108 #1, 2, 3, 4<br><br>
 Exercises in p.113 #1, 2, 3, 4<br>
 Exercises in p.116 #1, 2, 3, 4<br><br>
 
-<!-- confirmed below
 <b>Homework  #11</b> 10 problems. Due Date: June 9nd.<br>
 Exercises in p.123 #1, 2, 3<br>
 Exercises in p.128 #1, 2, 3<br>
 Exercises in p.129 #1, 2, 3, 4<br><br>
+
+
+<!-- confirmed below
 -->
 
 
