--- a/teaching/s2020_dg1.html
+++ b/teaching/s2020_dg1.html
@@ -41,6 +41,9 @@
 2019-09-18: Announcement -- Student groups for group presentation, <a href="f2019_dg2/groups.pdf" title="Student groups">PDF</a>. Be sure to check your email inbox.<br>
 2019-09-14: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 -->
+2020-05-31: Youtube videos Sessions 38, 39, 40, 41 will be available on May 31st 23:59. Find links for video recordings from CBNU eCampus.<br>
+2020-05-31: <FONT color="#FF00FF"><b>The last day of class</b></FONT> for this course is June the 26th (Friday), 18:00. All attendance claims and homeworks are due by this time. <FONT color="#FF0000"><b>Whatever the reason is</b></FONT> late homework/attendance claims <FONT color="#FF0000"><b>will not</b></FONT> be accepted after this time.<br>
+2020-05-31: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>
 2020-05-23: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>
 2020-05-23: Youtube videos Sessions 34, 35, 36, 37 will be available on May 24th 23:59. Find links for video recordings from CBNU eCampus.<br>
 2020-05-14: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>
@@ -99,7 +102,8 @@ Problems from the National Exam: <a href="s2020_dg1/hw7.pdf" title="Selected pro
 <b>Homework  #8</b>  11 problems. Due Date: June 4th.<br>
 Problems from Chapter 7 (Part 2): #12, 14, 19, 21, 23, 28, 29<br>
 Problems from the National Exam: <a href="s2020_dg1/hw8.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
-<!-- HW6 <br> -->
+
+<!-- HW9 about this week's exercises <br> -->
 
 
 
@@ -154,7 +158,7 @@ Here are problems from Chapter 10: <a href="f2019_dg2/ch10prob.pdf" title="Chapt
 
 
 <h2><p>Exam Schedules</p></h2>
-Midterm Exam: Cancelled.
+Midterm Exam: Cancelled.<br><br>
 <!--
 <FONT COLOR="#C40062">22 October (Tuesday),</FONT> In-class.<br>
 - Coverage: Chapters 8 and 9. Subsections on Rodrigues' formula, Asymptotic lines are not included.<br>
@@ -165,12 +169,10 @@ Here is the <a href="f2019_dg2/midterm.pdf"  title="Open Midterm Exam">Problems<
 <br>
 -->
 
-Final Exam: TBA
-<!--
-<FONT COLOR="#C40062">16 December (Monday),</FONT> at E1-2 Room 306, 14:00--16:00.<br>
-- Coverage: Chapters 8, 9, 10, and 11. In Chapters 10 and 11, only those sections we covered in class will be included to the coverage.<br>
-- Total 8 questions. There will be one True/False question (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.), and 4 questions which are identical or related to homework problems, and 3 question from the old national exam problems or mock test problems (See the attached PDF for Homeworks #4, #7.<br>
-Here are <a href="f2019_dg2/final.pdf"  title="Open final Exam">Problems</a> and <a href="f2019_dg2/finalsol.pdf"  title="Open Final Exam Solution">Solutions</a>. The average was 40.51, standard deviation 20.06, and the maximum score achieved by a student 80.<br>
+Final Exam:  <FONT COLOR="#C40062">23 June (Tuesday)</FONT> at E1-2 Room 306, 15:00--16:50.<br>
+- Coverage: Chapters 3, 4, 5, and 7 of the main textbook and provided references (available on the e-Campus).<br>
+- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.), 4 questions which are identical or directly related to homework problems and/or those theories and examples discussed in class. In particular there will be at least 1 problem (can be more than 1) asking about dual vector spaces, differential forms, and the second derivative test using the Hessian. The remaining 3 questions will be taken from old national exam problems or mock test problems. This exam would gear toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
+<!--Here are <a href="f2019_dg2/final.pdf"  title="Open final Exam">Problems</a> and <a href="f2019_dg2/finalsol.pdf"  title="Open Final Exam Solution">Solutions</a>. The average was 40.51, standard deviation 20.06, and the maximum score achieved by a student 80.<br>
 - If you think you did not get a final grade you deserve, you are welcome to dispute. Please remember that the correction request has to be filed no later that 30 December 2019.<br><br>
 -->
 
