--- a/teaching/s2020_geom1.html
+++ b/teaching/s2020_geom1.html
@@ -52,9 +52,10 @@
 2020-05-25: Youtube videos Sessions 11-1, 11-2, 11-3 will be available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
 2020-05-25: <FONT COLOR="red">Homework #11</FONT> has been posted below.<br>
 -->
-
-
-
+2020-05-31: <FONT color="#FF00FF"><b>The last day of class</b></FONT> for this course is June the 26th (Friday), 18:00. All attendance claims and homeworks are due by this time. <FONT color="#FF0000"><b>Whatever the reason is</b></FONT> late homework/attendance claims <FONT color="#FF0000"><b>will not</b></FONT> be accepted after this time.<br>
+2020-05-31: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>
+2020-05-31: Youtube videos Sessions 12-1, 12-2, 12-3 will be available on June 1st at 15:00. Find links for video recordings from CBNU eCampus.<br>
+2020-05-31: <FONT COLOR="red">Homework #12</FONT> has been posted below.<br>
 2020-05-23: Youtube videos Sessions 11-1, 11-2, 11-3 will be available on May 25th at 15:00. Find links for video recordings from CBNU eCampus.<br>
 2020-05-23: <FONT COLOR="red">Homework #11</FONT> has been posted below.<br>
 2020-05-18: Youtube videos Sessions 10-1, 10-2, 10-3 will be available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
@@ -158,28 +159,43 @@ Exercises in p.108 #1, 2, 3, 4<br><br>
 Exercises in p.113 #1, 2, 3, 4<br>
 Exercises in p.116 #1, 2, 3, 4<br><br>
 
-<b>Homework  #11</b> 10 problems. Due Date: June 9nd.<br>
+<b>Homework  #11</b> 10 problems. Due Date: June 9th.<br>
 Exercises in p.123 #1, 2, 3<br>
 Exercises in p.128 #1, 2, 3<br>
 Exercises in p.129 #1, 2, 3, 4<br><br>
 
+<b>Homework  #12</b> 10 problems. Due Date: June 16th.<br>
+Exercises in p.133 #1, 2<br>
+Exercises in p.135 #1, 2<br>
+Exercises in p.137 #1, 2, 3<br>
+Exercises in p.138 #1, 2, 3<br><br>
 
 <!-- confirmed below
+
+<b>Homework  #13</b> 12 problems. Due Date: June 23th.<br>
+Exercises in p.141 #1, 3<br>
+Exercises in p.142 #1, 2<br>
+Exercises in p.143 #2, 3<br>
+Exercises in p.144 #2, 3<br>
+Exercises in p.146 #1, 3<br>
+Exercises in p.148 #1, 3<br><br>
+
 -->
 
 
 
 <h2><p>Exam Schedules</p></h2>
-Midterm Exam: Cancelled. <br> <!-- <FONT COLOR="#C40062">28 October (Monday),</FONT> In-class.<br>
+Midterm Exam: Cancelled. <br><br> <!-- <FONT COLOR="#C40062">28 October (Monday),</FONT> In-class.<br>
 - Coverage: Chapters 1, 2, and 3.<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.), 3 questions which are identical or directly related to homework problems, and remaining 4 questions are from those discussed in class. This exam would gear toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - We still meet on 29 October (Tuesday) as scheduled for a regular class meeting.<br>
 Here are <a href="f2019_geom2/midterm.pdf"  title="Open Midterm Exam">Problems</a> and <a href="f2019_geom2/midtermsol.pdf"  title="Open Midterm Exam Solution">Solutions</a>. The average was 46.93 and the maximum score achieved by a student was 95.<br>
 - If you think you did not get a score you deserve, you are welcome to dispute. Please do that no later than 18:00 of the day before your final exam day.<br>
 <br>-->
-Final Exam: TBA <!-- <FONT COLOR="#C40062">16 December (Monday),</FONT> In-class.<br>
-- Coverage: Chapters 1, 2, 3, 4, 5, and 6 (only those sections covered in class).<br>
-- Total 8 questions. The style and focus of the exam will be similar to the midterm exam. Chapters 1, 2, and 3 will be only indirectly covered in this exam to the extent that the exam assumes everything we studied together in this course. Exam problems will be mostly from those materials we studied after the midterm exam.<br>
+Final Exam:  <FONT COLOR="#C40062">22 June (Monday)</FONT> at E1-2 Room 306, 15:00--16:50.<br>
+- Coverage: All sections of the main textbook we have covered in this semester.<br>
+- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.), 3 questions which are identical or directly related to homework problems, and remaining 4 questions are from those theories and examples discussed in class. This exam would gear toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
+<!--
 Here are <a href="f2019_geom2/final.pdf"  title="Open final Exam">Problems</a> and <a href="f2019_geom2/finalsol.pdf"  title="Open Final Exam Solution">Solutions</a>. The average was 58.57 and the maximum score achieved by a student was 90.<br>
 - If you think you did not get a final grade you deserve, you are welcome to dispute. Please remember that the correction request has to be filed no later that 30 December 2019.<br>
 <br>-->
