--- a/teaching/s2020_fom1.html
+++ b/teaching/s2020_fom1.html
@@ -59,6 +59,8 @@
 2016-01-27: There will be a student ambassador from the Dolciani Mathematics Learning Center sometime in the beginning of the semester, and introduce about the center for about five minutes. Please welcome him/her and have interest.<br>
 2016-01-27: Check out <FONT COLOR="red">Homework #1</FONT> below.<br>
 -->
+2020-05-31: <FONT color="#FF00FF"><b>The last day of class</b></FONT> for this course is June the 26th (Friday), 18:00. All attendance claims and homeworks are due by this time. <FONT color="#FF0000"><b>Whatever the reason is</b></FONT> late homework/attendance claims <FONT color="#FF0000"><b>will not</b></FONT> be accepted after this time.<br>
+2020-05-31: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>
 2020-05-19: For this week's lectures you will be provided recorded videos posted on Youtube. The <em>platform</em> will be CBNU e-Campus (Blackboard) wherein you will be able to find Youtube video links. By Today 19:00, you will be provided video recordings of lectures for the first 3 contact hours. You will have to write an email as instructed via email with an answer key (provided in the video) for each contact hour. Please check your email for relevant policies.<br>
 2020-05-18: Due to concerns of Corona virus in Cheongju City, we will go remote this week. Please check your email as well as further updates.<br>
 2020-05-12: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>
@@ -103,9 +105,16 @@ Exercises in p.67 #22, 24, 26, 27, 28, 30, 36, 37<br><br>
 Exercises in p.82 #2, 3, 4, 5, 6, 8<br><br>
 
 
+<h2><p>Exam Schedules</p></h2>
+The final exam will be a take-home exam and will cover the entire material we cover until June 23rd. Please read <a href="s2020_fom/finalcoversheet.pdf" title="Final Exam Policies">Final exam policies</a>. The take-home exam will be distributed in-class at the end of the class on June 23rd. It will also be posted here after that.<br><br>
+
+<FONT color="#FF00FF"><b>Take-Home Final Exam</b></FONT> <a href="s2020_fom/finalcoversheet.pdf" title="Final Exam Cover Sheet">Cover Sheet</a>. <!-- , <a href="S2016_MATH250/exam2.pdf">Problem sheet</a>, <a href="S2016_MATH250/exam2sol.pdf">Solution</a>.--><br>
+ <!-- The average was 76.48 and the maximum score achieved by a student was 100.<br><br>-->
+
+
+
+
 <!--
-
-
 <h3><p>Advertisements</p></h3>
 In coming Spring 2016, I will be teaching <b>MATH250-02: Calculus with Analytic Geometry 3</b> meeting <b>Mondays and Wednesdays 5:35PM -- 7:25PM</b>. All are very welcome!<br>
  -->
