--- a/teaching/s2020_dg1.html
+++ b/teaching/s2020_dg1.html
@@ -41,6 +41,8 @@
 2019-09-18: Announcement -- Student groups for group presentation, <a href="f2019_dg2/groups.pdf" title="Student groups">PDF</a>. Be sure to check your email inbox.<br>
 2019-09-14: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 -->
+2020-06-01: <FONT COLOR="red">Homework #10</FONT> has been posted below.<br>
+2020-06-01: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br>
 2020-05-31: Youtube videos Sessions 38, 39, 40, 41 will be available on May 31st 23:59. Find links for video recordings from CBNU eCampus.<br>
 2020-05-31: <FONT color="#FF00FF"><b>The last day of class</b></FONT> for this course is June the 26th (Friday), 18:00. All attendance claims and homeworks are due by this time. <FONT color="#FF0000"><b>Whatever the reason is</b></FONT> late homework/attendance claims <FONT color="#FF0000"><b>will not</b></FONT> be accepted after this time.<br>
 2020-05-31: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>
@@ -87,11 +89,11 @@ Problems from Chapter 4 (Part 2): #11, 12, 13, 16, 17, 18, 19, 21, 28, 30<br><br
 Problems from Chapter 4 (Part 3): #32, 33, 34, 35, 38<br>
 Problems from Chapter 5 (Part 1): #5, 7, 8, 25, 28<br><br>
 
-<b>Homework  #5</b>  8 problems. Due Date: May 21th.<br>
+<b>Homework  #5</b>  8 problems. Due Date: May 21st.<br>
 Problems from Chapter 5 (Part 2): #14, 15, 16, 35<br>
 Problems from the National Exam: <a href="s2020_dg1/hw5.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
 
-<b>Homework  #6</b>  7 problems. Due Date: May 21th.<br>
+<b>Homework  #6</b>  7 problems. Due Date: May 21st.<br>
 Problems from Chapter 5 (Part 3): #22, 23, 24, 33<br>
 Problems from the National Exam: <a href="s2020_dg1/hw6.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
 
@@ -103,13 +105,17 @@ Problems from the National Exam: <a href="s2020_dg1/hw7.pdf" title="Selected pro
 Problems from Chapter 7 (Part 2): #12, 14, 19, 21, 23, 28, 29<br>
 Problems from the National Exam: <a href="s2020_dg1/hw8.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
 
+<b>Homework  #9</b>  12 problems. Due Date: June 11th.<br>
+Problems from Serge Lang, Linear Algebra, 3rd Ed. p.131 Exercise #6<br>
+Problems from M. P. do Carmo, Differential forms and applications, p.10 Exercise #1, 2, 5, 7, 10<br>
+Problems from the National Exam: <a href="s2020_dg1/hw9.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
 <!-- HW9 about this week's exercises <br> -->
 
-
-
-
-
-
+<b>Homework  #10</b>  12 problems. Due Date: June 19th.<br>
+Problems from Marsden and Tromba, Vector Calculus, p.182 Exercise #1, 5, 18, 22, 29, 31<br>
+Problems from O'Neill, Elementary Differential Geometry, p.102 Exercise #2, 7, 8<br>
+Problems from O'Neill, Elementary Differential Geometry, p.106 Exercise #2, 4<br>
+Problems from O'Neill, Elementary Differential Geometry, p.116 Exercise #4<br><br>
 
 
 
