--- a/teaching/s2020_dg1.html
+++ b/teaching/s2020_dg1.html
@@ -41,6 +41,8 @@
 2019-09-18: Announcement -- Student groups for group presentation, <a href="f2019_dg2/groups.pdf" title="Student groups">PDF</a>. Be sure to check your email inbox.<br>
 2019-09-14: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 -->
+2020-06-07: If you arrive early on the exam date, please use the waiting room. See the final exam information.<br>
+2020-06-07: Youtube videos Sessions 42, 43, 44 are available now. Find links for video recordings from CBNU eCampus. This completes lecture uploads in this course.<br>
 2020-06-01: <FONT COLOR="red">Homework #10</FONT> has been posted below.<br>
 2020-06-01: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br>
 2020-05-31: Youtube videos Sessions 38, 39, 40, 41 will be available on May 31st 23:59. Find links for video recordings from CBNU eCampus.<br>
@@ -175,7 +177,7 @@ Here is the <a href="f2019_dg2/midterm.pdf"  title="Open Midterm Exam">Problems<
 <br>
 -->
 
-Final Exam:  <FONT COLOR="#C40062">23 June (Tuesday)</FONT> at E1-2 Room 306, 15:00--16:50.<br>
+Final Exam:  <FONT COLOR="#C40062">23 June (Tuesday)</FONT> at E1-2 Room 306, 15:00--16:50. (If you arrive early, please wait at E1-1 Room 140.)<br>
 - Coverage: Chapters 3, 4, 5, and 7 of the main textbook and provided references (available on the e-Campus).<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.), 4 questions which are identical or directly related to homework problems and/or those theories and examples discussed in class. In particular there will be at least 1 problem (can be more than 1) asking about dual vector spaces, differential forms, and the second derivative test using the Hessian. The remaining 3 questions will be taken from old national exam problems or mock test problems. This exam would gear toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 <!--Here are <a href="f2019_dg2/final.pdf"  title="Open final Exam">Problems</a> and <a href="f2019_dg2/finalsol.pdf"  title="Open Final Exam Solution">Solutions</a>. The average was 40.51, standard deviation 20.06, and the maximum score achieved by a student 80.<br>
