--- a/teaching/s2020_geom1.html
+++ b/teaching/s2020_geom1.html
@@ -52,6 +52,10 @@
 2020-05-25: Youtube videos Sessions 11-1, 11-2, 11-3 will be available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
 2020-05-25: <FONT COLOR="red">Homework #11</FONT> has been posted below.<br>
 -->
+2020-06-07: <FONT COLOR="red">Homework #14</FONT> has been posted below. This one is for your practice and you do not have to hand it in. It does not get counted toward your credit.<br>
+2020-06-07: <FONT COLOR="red">Homework #13</FONT> has been posted below.<br>
+2020-06-07: If you arrive early on the exam date, please use the waiting room. See the final exam information.<br>
+2020-06-07: Youtube videos Sessions 13-1, 13-2, 13-3, 14-1, 14-2, 14-3, 15-1 will be available on June 8th at 15:00. Find links for video recordings from CBNU eCampus. This completes lecture uploads in this course.<br>
 2020-05-31: <FONT color="#FF00FF"><b>The last day of class</b></FONT> for this course is June the 26th (Friday), 18:00. All attendance claims and homeworks are due by this time. <FONT color="#FF0000"><b>Whatever the reason is</b></FONT> late homework/attendance claims <FONT color="#FF0000"><b>will not</b></FONT> be accepted after this time.<br>
 2020-05-31: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>
 2020-05-31: Youtube videos Sessions 12-1, 12-2, 12-3 will be available on June 1st at 15:00. Find links for video recordings from CBNU eCampus.<br>
@@ -170,15 +174,21 @@ Exercises in p.135 #1, 2<br>
 Exercises in p.137 #1, 2, 3<br>
 Exercises in p.138 #1, 2, 3<br><br>
 
-<!-- confirmed below
-
-<b>Homework  #13</b> 12 problems. Due Date: June 23th.<br>
+<b>Homework  #13</b> 12 problems. Due Date: June 22nd.<br>
 Exercises in p.141 #1, 3<br>
 Exercises in p.142 #1, 2<br>
 Exercises in p.143 #2, 3<br>
 Exercises in p.144 #2, 3<br>
 Exercises in p.146 #1, 3<br>
 Exercises in p.148 #1, 3<br><br>
+
+<b>Homework  #14</b> 5 problems. No need to hand-in (not counted toward Homework score).<br>
+Exercises in p.184 #1, 2, 3<br>
+Exercises in p.187 #1, 3<br><br>
+
+<!-- confirmed below
+
+
 
 -->
 
@@ -192,7 +202,7 @@ Midterm Exam: Cancelled. <br><br> <!-- <FONT COLOR="#C40062">28 October (Monday)
 Here are <a href="f2019_geom2/midterm.pdf"  title="Open Midterm Exam">Problems</a> and <a href="f2019_geom2/midtermsol.pdf"  title="Open Midterm Exam Solution">Solutions</a>. The average was 46.93 and the maximum score achieved by a student was 95.<br>
 - If you think you did not get a score you deserve, you are welcome to dispute. Please do that no later than 18:00 of the day before your final exam day.<br>
 <br>-->
-Final Exam:  <FONT COLOR="#C40062">22 June (Monday)</FONT> at E1-2 Room 306, 15:00--16:50.<br>
+Final Exam:  <FONT COLOR="#C40062">22 June (Monday)</FONT> at E1-2 Room 306, 15:00--16:50. (If you arrive early, please wait at E1-1 Room 140.)<br>
 - Coverage: All sections of the main textbook we have covered in this semester.<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.), 3 questions which are identical or directly related to homework problems, and remaining 4 questions are from those theories and examples discussed in class. This exam would gear toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 <!--
