--- a/teaching/s2020_fom1.html
+++ b/teaching/s2020_fom1.html
@@ -59,6 +59,8 @@
 2016-01-27: There will be a student ambassador from the Dolciani Mathematics Learning Center sometime in the beginning of the semester, and introduce about the center for about five minutes. Please welcome him/her and have interest.<br>
 2016-01-27: Check out <FONT COLOR="red">Homework #1</FONT> below.<br>
 -->
+2020-06-10: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>
+2020-06-10: <FONT color="#FF0000"><b>Reminder:</b></FONT> As stipulated on the syllabus, you are expected to write, hand-in, and give a presentation on your term paper. Please see the term paper presentation below.<br>
 2020-05-31: <FONT color="#FF00FF"><b>The last day of class</b></FONT> for this course is June the 26th (Friday), 18:00. All attendance claims and homeworks are due by this time. <FONT color="#FF0000"><b>Whatever the reason is</b></FONT> late homework/attendance claims <FONT color="#FF0000"><b>will not</b></FONT> be accepted after this time.<br>
 2020-05-31: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>
 2020-05-19: For this week's lectures you will be provided recorded videos posted on Youtube. The <em>platform</em> will be CBNU e-Campus (Blackboard) wherein you will be able to find Youtube video links. By Today 19:00, you will be provided video recordings of lectures for the first 3 contact hours. You will have to write an email as instructed via email with an answer key (provided in the video) for each contact hour. Please check your email for relevant policies.<br>
@@ -104,6 +106,9 @@ Exercises in p.67 #22, 24, 26, 27, 28, 30, 36, 37<br><br>
 <b>Homework  #6</b> 6 problems. Due Date: June 2nd.<br>
 Exercises in p.82 #2, 3, 4, 5, 6, 8<br><br>
 
+<b>Homework  #7</b> 10 problems. Due Date: June 23rd.<br>
+Exercises in p. #3, 5, 6, 7, 8, 9, 10, 11, 12, 13<br><br>
+
 
 <h2><p>Exam Schedules</p></h2>
 The final exam will be a take-home exam and will cover the entire material we cover until June 23rd. Please read <a href="s2020_fom1/finalcoversheet.pdf" title="Final Exam Policies">Final exam policies</a>. The take-home exam will be distributed in-class at the end of the class on June 23rd. It will also be posted here after that.<br><br>
@@ -112,7 +117,10 @@ The final exam will be a take-home exam and will cover the entire material we co
  <!-- The average was 76.48 and the maximum score achieved by a student was 100.<br><br>-->
 
 
+<h2><p>Term-paper presentation</p></h2>
+Your term paper will be collected and you will be giving a presentation about your term paper. The presentation will take place on <b>June 30th, 2020 19:00 at E1-1 Room 136</b> (the classroom we meet). You will be given 20 minutes to give a free-form presentation. The <b>deadline for your term paper is also June 30th, 2020 19:00</b> and will be collected when your final exam is collected.<br><br>
 
+<b>Term-paper policies:</b> (1) Your term-paper must have a title <em>An implementation of F. Klein's "Erlanger Programm" in secondary school mathematics curricula.</em> That said, you <FONT color="#800040"><b>do not</b></FONT> have a freedom to choose the title. Of course your term-paper must have a contents that you can use the given title. There is no page limit or a format. You hand-in a paper that shows the depth and the width of your intellectual capacity. (2) You may use internet, books, and/or other resources. However, you must clarify the source in a distinguishable form. Failure in meeting this condition is called a <em>plagiarism</em> which is equivalent to a cheating in exam.<br>
 
 <!--
 <h3><p>Advertisements</p></h3>
