--- a/teaching/s2020_fom1.html
+++ b/teaching/s2020_fom1.html
@@ -59,6 +59,7 @@
 2016-01-27: There will be a student ambassador from the Dolciani Mathematics Learning Center sometime in the beginning of the semester, and introduce about the center for about five minutes. Please welcome him/her and have interest.<br>
 2016-01-27: Check out <FONT COLOR="red">Homework #1</FONT> below.<br>
 -->
+2020-06-11: The make-up class for the Children's day will take place on Tuesday, June 30th 19:00 at E1-1 Room 136. Accordingly, we change <FONT color="#FF00FF"><b>The last day of class</b></FONT> for this course to June 30th 23:59. All attendance claims and homeworks are due by this time.<br> 
 2020-06-10: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>
 2020-06-10: <FONT color="#FF0000"><b>Reminder:</b></FONT> As stipulated on the syllabus, you are expected to write, hand-in, and give a presentation on your term paper. Please see the term paper presentation below.<br>
 2020-05-31: <FONT color="#FF00FF"><b>The last day of class</b></FONT> for this course is June the 26th (Friday), 18:00. All attendance claims and homeworks are due by this time. <FONT color="#FF0000"><b>Whatever the reason is</b></FONT> late homework/attendance claims <FONT color="#FF0000"><b>will not</b></FONT> be accepted after this time.<br>
