--- a/teaching/s2020_geom1.html
+++ b/teaching/s2020_geom1.html
@@ -52,6 +52,7 @@
 2020-05-25: Youtube videos Sessions 11-1, 11-2, 11-3 will be available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
 2020-05-25: <FONT COLOR="red">Homework #11</FONT> has been posted below.<br>
 -->
+2020-06-30: Your final exam papers have been graded. You are welcome to set up an appointment with me to review your graded paper and request corrections. (I advise you to do so.) Please finish the review process no later than 18:00 July 2nd, 2020. After this time, your final scores and final grades will not be changed for any reason.<br>
 2020-06-07: <FONT COLOR="red">Homework #14</FONT> has been posted below. This one is for your practice and you do not have to hand it in. It does not get counted toward your credit.<br>
 2020-06-07: <FONT COLOR="red">Homework #13</FONT> has been posted below.<br>
 2020-06-07: If you arrive early on the exam date, please use the waiting room. See the final exam information.<br>
