--- a/teaching/s2020_geom1.html
+++ b/teaching/s2020_geom1.html
@@ -206,6 +206,7 @@ Here are <a href="f2019_geom2/midterm.pdf"  title="Open Midterm Exam">Problems</
 Final Exam:  <FONT COLOR="#C40062">22 June (Monday)</FONT> at E1-2 Room 306, 15:00--16:50. (If you arrive early, please wait at E1-1 Room 140.)<br>
 - Coverage: All sections of the main textbook we have covered in this semester.<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.), 3 questions which are identical or directly related to homework problems, and remaining 4 questions are from those theories and examples discussed in class. This exam would gear toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
+The average was 61.14, standard deviation 19.26, and the maximum score achieved by a student 86.<br>
 <!--
 Here are <a href="f2019_geom2/final.pdf"  title="Open final Exam">Problems</a> and <a href="f2019_geom2/finalsol.pdf"  title="Open Final Exam Solution">Solutions</a>. The average was 58.57 and the maximum score achieved by a student was 90.<br>
 - If you think you did not get a final grade you deserve, you are welcome to dispute. Please remember that the correction request has to be filed no later that 30 December 2019.<br>
