--- a/teaching/s2020_fom1.html
+++ b/teaching/s2020_fom1.html
@@ -59,6 +59,8 @@
 2016-01-27: There will be a student ambassador from the Dolciani Mathematics Learning Center sometime in the beginning of the semester, and introduce about the center for about five minutes. Please welcome him/her and have interest.<br>
 2016-01-27: Check out <FONT COLOR="red">Homework #1</FONT> below.<br>
 -->
+2020-06-30: Your final exam papers have been graded. You are welcome to set up an appointment with me to review your graded paper and request corrections. (I advise you to do so.) Please finish the review process no later than 18:00 July 2nd, 2020. After this time, your final scores and final grades will not be changed for any reason.<br>
+2020-06-30: <FONT color="#FF00FF"><b>The last day of class</b></FONT> for this course has been extended to <strike>July the 2nd, 00:00.</strike> All attendance claims and homeworks are due by this time. <FONT color="#FF0000"><b>Whatever the reason is</b></FONT> late homework/attendance claims <FONT color="#FF0000"><b>will not</b></FONT> be accepted after this time.<br>
 2020-06-11: The make-up class for the Children's day will take place on Tuesday, June 30th 19:00 at E1-1 Room 136. Accordingly, we change <FONT color="#FF00FF"><b>The last day of class</b></FONT> for this course to June 30th 23:59. All attendance claims and homeworks are due by this time.<br>
 2020-06-10: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>
 2020-06-10: <FONT color="#FF0000"><b>Reminder:</b></FONT> As stipulated on the syllabus, you are expected to write, hand-in, and give a presentation on your term paper. Please see the term paper presentation below.<br>
@@ -114,7 +116,9 @@ Exercises in p. #3, 5, 6, 7, 8, 9, 10, 11, 12, 13<br><br>
 <h2><p>Exam Schedules</p></h2>
 The final exam will be a take-home exam and will cover the entire material we cover until June 23rd. Please read <a href="s2020_fom1/finalcoversheet.pdf" title="Final Exam Policies">Final exam policies</a>. The take-home exam will be distributed in-class at the end of the class on June 23rd. It will also be posted here after that.<br><br>
 
-<FONT color="#FF00FF"><b>Take-Home Final Exam</b></FONT> <a href="s2020_fom1/finalcoversheet.pdf" title="Final Exam Cover Sheet">Cover Sheet</a>. <!-- , <a href="S2016_MATH250/exam2.pdf">Problem sheet</a>, <a href="S2016_MATH250/exam2sol.pdf">Solution</a>.--><br>
+<FONT color="#FF00FF"><b>Take-Home Final Exam</b></FONT> <a href="s2020_fom1/finalcoversheet.pdf" title="Final Exam Cover Sheet">Cover Sheet</a>.<br>
+The average was 71.25, standard deviation 4.79, and the maximum score achieved by a student 75.<br>
+<!-- , <a href="S2016_MATH250/exam2.pdf">Problem sheet</a>, <a href="S2016_MATH250/exam2sol.pdf">Solution</a>.-->
  <!-- The average was 76.48 and the maximum score achieved by a student was 100.<br><br>-->
 
 
