--- a/teaching/s2020_dg1.html
+++ b/teaching/s2020_dg1.html
@@ -43,6 +43,7 @@
 
 2020-06-18: The department office has changed the location of the upcoming final exam. Please come to E1-1 Room 148.<br>
 -->
+2020-07-05: Letter grades have been submitted. Enjoy your summer break.<br>
 2020-06-30: Your final exam papers have been graded. You are welcome to set up an appointment with me to review your graded paper and request corrections. (I advise you to do so.) Please finish the review process no later than 18:00 July 2nd, 2020. After this time, your final scores and final grades will not be changed for any reason.<br>
 2020-06-07: If you arrive early on the exam date, please use the waiting room. See the final exam information.<br>
 2020-06-07: Youtube videos Sessions 42, 43, 44 are available now. Find links for video recordings from CBNU eCampus. This completes lecture uploads in this course.<br>
