--- a/teaching/s2020_tig1.html
+++ b/teaching/s2020_tig1.html
@@ -60,12 +60,29 @@
 2016-01-27: There will be a student ambassador from the Dolciani Mathematics Learning Center sometime in the beginning of the semester, and introduce about the center for about five minutes. Please welcome him/her and have interest.<br>
 2016-01-27: Check out <FONT COLOR="red">Homework #1</FONT> below.<br>
 -->
+2020-07-15: Welcome again! Starting tomorrow, Youtube video lectures, problem sets, quizzes will be posted on <a href="https://cbnu.blackboard.com/"  title="Open CBNU eCampus">CBNU eCampus</a> at 13:00 on every class meeting day, and the quiz for that day is due in 20 hours. Also, please check your email detailing attendance policies and other important announcements.<br>
 2020-03-07: Welcome! Our first day of class is July 16th.<br>
 
 
+<h2><p>Weekly Quizzes</p></h2>
+For Problems and Solutions to Weekly Quizzes, go to <a href="https://cbnu.blackboard.com/"  title="Open CBNU eCampus">CBNU eCampus</a> (a.k.a. Blackboard)<br><br>
+<b>Quiz 1</b> on July 16th is due on July 17th 09:00.<br>
+<b>Quiz 2</b> on July 17th is due on July 18th 09:00.<br>
+<b>Quiz 3</b> on July 20th is due on July 21st 09:00.<br>
+<b>Quiz 4</b> on July 21st is due on July 22nd 09:00.<br>
+<b>Quiz 5</b> on July 22nd is due on July 23rd 09:00.<br>
+<b>Quiz 6</b> on July 23rd is due on July 24th 09:00.<br>
+<b>Quiz 7</b> on July 24th is due on July 25th 09:00.<br>
+<b>Quiz 8</b> on July 27th is due on July 28th 09:00.<br>
+<b>Quiz 9</b> on July 28th is due on July 29th 09:00.<br>
+<b>Quiz 10</b> on July 29th is due on July 30th 09:00.<br>
+<b>Quiz 11</b> on July 30th is due on July 31st 09:00.<br>
+<b>Quiz 12</b> on July 31st is due on August 1st 09:00.<br>
+<b>Quiz 13</b> on August 3rd is due on August 4th 09:00.<br>
+<b>Quiz 14</b> on August 4th is due on August 5th 09:00.<br>
+<b>Quiz 15</b> on August 5th is due on August 6th 09:00.<br>
+<br>
 
-<h2><p>Homework</p></h2>
-<b>Homework  #1</b> TBA
 
 
 
@@ -81,7 +98,7 @@ In coming Spring 2016, I will be teaching <b>MATH250-02: Calculus with Analytic 
 
 
 <h2><p>Links</p></h2>
-<a href="http://newton.kias.re.kr/~byungdo">Webpage of Byungdo Park</a><br>
+<a href="https://byungdo.github.io/">Webpage of Byungdo Park</a><br>
 <a href="http://edu.chungbuk.ac.kr/mathedu/index.do">CBNU Mathematics Education Department Homepage</a><br>
 <br><br>
 
