--- a/teaching/s2020_fom1.html
+++ b/teaching/s2020_fom1.html
@@ -59,12 +59,13 @@
 2016-01-27: There will be a student ambassador from the Dolciani Mathematics Learning Center sometime in the beginning of the semester, and introduce about the center for about five minutes. Please welcome him/her and have interest.<br>
 2016-01-27: Check out <FONT COLOR="red">Homework #1</FONT> below.<br>
 -->
+2020-07-05: Letter grades have been submitted. Enjoy your summer break.<br>
 2020-06-30: Your final exam papers have been graded. You are welcome to set up an appointment with me to review your graded paper and request corrections. (I advise you to do so.) Please finish the review process no later than 18:00 July 2nd, 2020. After this time, your final scores and final grades will not be changed for any reason.<br>
 2020-06-30: <FONT color="#FF00FF"><b>The last day of class</b></FONT> for this course has been extended to <strike>July the 2nd, 00:00.</strike> All attendance claims and homeworks are due by this time. <FONT color="#FF0000"><b>Whatever the reason is</b></FONT> late homework/attendance claims <FONT color="#FF0000"><b>will not</b></FONT> be accepted after this time.<br>
 2020-06-11: The make-up class for the Children's day will take place on Tuesday, June 30th 19:00 at E1-1 Room 136. Accordingly, we change <FONT color="#FF00FF"><b>The last day of class</b></FONT> for this course to June 30th 23:59. All attendance claims and homeworks are due by this time.<br>
 2020-06-10: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>
 2020-06-10: <FONT color="#FF0000"><b>Reminder:</b></FONT> As stipulated on the syllabus, you are expected to write, hand-in, and give a presentation on your term paper. Please see the term paper presentation below.<br>
-2020-05-31: <FONT color="#FF00FF"><b>The last day of class</b></FONT> for this course is <strike>June the 26th (Friday), 18:00.</strike> All attendance claims and homeworks are due by this time. <FONT color="#FF0000"><b>Whatever the reason is</b></FONT> late homework/attendance claims <FONT color="#FF0000"><b>will not</b></FONT> be accepted after this time.<br>
+2020-05-31: <FONT color="#FF00FF"><b>The last day of class</b></FONT> for this course is <strike>June the 26th (Friday), 18:00.</strike> All attendance claims and homeworks are due by this time.<br>
 2020-05-31: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>
 2020-05-19: For this week's lectures you will be provided recorded videos posted on Youtube. The <em>platform</em> will be CBNU e-Campus (Blackboard) wherein you will be able to find Youtube video links. By Today 19:00, you will be provided video recordings of lectures for the first 3 contact hours. You will have to write an email as instructed via email with an answer key (provided in the video) for each contact hour. Please check your email for relevant policies.<br>
 2020-05-18: Due to concerns of Corona virus in Cheongju City, we will go remote this week. Please check your email as well as further updates.<br>
@@ -117,7 +118,7 @@ Exercises in p. #3, 5, 6, 7, 8, 9, 10, 11, 12, 13<br><br>
 The final exam will be a take-home exam and will cover the entire material we cover until June 23rd. Please read <a href="s2020_fom1/finalcoversheet.pdf" title="Final Exam Policies">Final exam policies</a>. The take-home exam will be distributed in-class at the end of the class on June 23rd. It will also be posted here after that.<br><br>
 
 <FONT color="#FF00FF"><b>Take-Home Final Exam</b></FONT> <a href="s2020_fom1/finalcoversheet.pdf" title="Final Exam Cover Sheet">Cover Sheet</a>.<br>
-The average was 71.25, standard deviation 4.79, and the maximum score achieved by a student 75.<br>
+The average was 72.5, standard deviation 6.46, and the maximum score achieved by a student 75.<br>
 <!-- , <a href="S2016_MATH250/exam2.pdf">Problem sheet</a>, <a href="S2016_MATH250/exam2sol.pdf">Solution</a>.-->
  <!-- The average was 76.48 and the maximum score achieved by a student was 100.<br><br>-->
 
