--- a/teaching/s2020_tig1.html
+++ b/teaching/s2020_tig1.html
@@ -60,6 +60,7 @@
 2016-01-27: There will be a student ambassador from the Dolciani Mathematics Learning Center sometime in the beginning of the semester, and introduce about the center for about five minutes. Please welcome him/her and have interest.<br>
 2016-01-27: Check out <FONT COLOR="red">Homework #1</FONT> below.<br>
 -->
+2020-08-06: Letter grades have been submitted. Enjoy your summer.<br>
 2020-07-15: Welcome again! Starting tomorrow, Youtube video lectures, problem sets, quizzes will be posted on <a href="https://cbnu.blackboard.com/"  title="Open CBNU eCampus">CBNU eCampus</a> at 13:00 on every class meeting day, and the quiz for that day is due in 20 hours. Also, please check your email detailing attendance policies and other important announcements.<br>
 2020-03-07: Welcome! Our first day of class is July 16th.<br>
 
