--- a/teaching/f2020_ge.html
+++ b/teaching/f2020_ge.html
@@ -5,8 +5,8 @@
 <font face="Times New Roman">
 <body>
 <h1><p align="center">Geometry and education</p></h1>
-<h3><p align="center">Course 7412062 Section 01, Fall 2019</p></h3>
-<h3><p align="center">Tuesdays 13:00 - 13:50, Wednesdays 10:00 - 11:50, Room: E1-1 #136</p></h3>
+<h3><p align="center">Course 7412062 Section 01, Fall 2020</p></h3>
+<h3><p align="center">Tuesdays 15:00 - 17:50, Room: eCampus</p></h3>
 <h3><p align="center">Chungbuk National University</p></h3>
 <br>
 
@@ -14,52 +14,14 @@
 <!-- FONT SIZE SPECIFICATION-->
 <font size="4" >
 <b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_chungbuk.jpg" width="337" height="62"><br>
-<b>Office Hours:</b> Mondays 16:00--17:00 at E1-1 #110 or by appointment.<br>
-<b>Syllabus:</b>  <a href="f2019_ge/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
+<b>Office Hours:</b> Mondays 17:00--17:50 at E1-1 #110 or by appointment.<br>
+<b>Syllabus:</b>  <a href="f2020_ge/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
 
 
 <h2><p>Announcements</p></h2>
 <!--
 
-
-2016-06-01: Letter grades has been submitted. Have a wonderful summer!<br>
-2016-06-01: A <FONT COLOR="#C40062">solution to the Final Exam</FONT> has been posted below.<br>
-2016-05-18: <FONT color="#FF00FF"><b>Take-home final exam</b></FONT> begins tonight 7:35pm. Due date: May 25th, 5:20pm. Late submissions will not be accepted.<br>
-2016-05-10: Take-home midterm exam will be given on May 18th. About a week of time will be given. If you are going to take the oral exam, please sign-up by submitting the coversheet by May 18th end of class.<br>
-2016-05-10: A review sheet on chapters 4, 5, and 6 has been posted below.<br>
-2016-05-10: <FONT COLOR="red">Homework #14</FONT> and <FONT COLOR="red">Homework #15</FONT> have been posted below.<br>
-2016-05-04: <FONT COLOR="red">Homework #13</FONT> has been posted below.<br>
-2016-04-29: Midterm exam solution has been posted below.<br>
-2016-04-25: <FONT COLOR="red">Homework #12</FONT> has been posted below.<br>
-2016-04-25: We do not meet on April 25th and 27th. Happy spring recess to all. We meet on Monday, May 2nd.<br>
-2016-04-20: Final exam will be also a take-home/oral exam. Note that the class <b>will meet</b> on <b>Wednesday May 25th, 5:20-7:20 pm</b>. <FONT color="#800040"><b>Note different time</b></FONT>. If we can cover all the materials in the syllabus by the 18th, I will give an introduction to Morse theory.<br>
-2016-04-18: There was a typo in Problem #4 in the take-home exam. Please see the corrected version below.<br>
-2016-04-13: <FONT COLOR="red">Homework #11</FONT> has been posted below.<br>
-2016-04-13: <FONT color="#FF00FF"><b>Take-home midterm exam</b></FONT> begins tonight 7:35pm. Due date: April 20th, 5:35pm. Late submissions will not be accepted.<br>
-2016-04-11: Here is a calculation I initially tried in the my example of the Bordered Hessian Test. This way or the one I eventually used in class gives the same conclusion. <a href="S2016_MATH250/2016-04-11.pdf" title="Bordered Hessian Example 1 Case 1">Click here</a>.<br>
-2016-04-06: <FONT COLOR="red">Homework #10</FONT> has been posted below. Take-home midterm exam will be given on April 13th. About a week of time will be given.<br>
-2016-04-05: A midterm exam review sheet on chapter 3 has been posted.<br>
-2016-03-30: <FONT color="#FF00FF"><b>Midterm Exam Announcement</b></FONT> has been posted below in Exam Schedules section.<br>
-2016-03-30: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br>
-2016-03-28: A corrigendum to the Review Problems on Chapters 1 and 2  as well as a corrected version are posted below. For those who missed today's lecture, I wrote up a complete solution to Problem 5 (1) and a sketch to 5. (2). Many thanks to Dariusz and Samrin for pointing out errors and asking questions about Problem 5.<br>
-2016-03-21: <FONT COLOR="red">Homework #8</FONT> has been posted below. Please also find from below a midterm exam review sheet on chapters 1 and 2.<br>
-2016-03-16: Next Wednesday the 23th is CUNY Friday. After coming Monday the 21st, we meet on the 28th. I will bring a review problem set on Monday and post it below.<br>
-2016-03-14: Check out <FONT COLOR="red">Homework #7</FONT> below.<br>
-2016-03-14: Here is a corrigendum to an example of a differentiable function whose derivative is not continuous. <a href="S2016_MATH250/2016-03-14.pdf" title="Differentiable function whose derivative is not continuous">Click here</a>.<br>
-2016-03-09: Check out <FONT COLOR="red">Homework #6</FONT> below.<br>
-2016-03-02: Please see an advertisement on CUNY GC MathFest below.<br>
-2016-03-02: Check out <FONT COLOR="red">Homework #5</FONT> below. Here is an answer to the limit question from today's class: <a href="S2016_MATH250/2016-03-02.pdf" title="Limit question">Click here</a>.<br>
-2016-02-24: More problems are posted for <FONT COLOR="red">Homework #4</FONT>. I will provide a sample exam in prior to the midterm exam. You will have ideas about what to focus.<br>
-2016-02-22: Check out <FONT COLOR="red">Homework #4</FONT> below. More problems will be posted on Wednesday the 24th.<br>
-2016-02-17: Check out <FONT COLOR="red">Homework #3</FONT> below. Suggested problems are not required. I will try to do one of them in class.<br>
-2016-02-10: Check out <FONT COLOR="red">Homework #2</FONT> posted again.<br>
-2016-02-08: Check out <FONT COLOR="red">Homework #2</FONT> below.<br>
-2016-02-08: There will be no class on Monday, February 15th (President's day).<br>
-2016-02-06: Check out <a href="S2016_MATH250/mathchallenge.pdf" title="The CUNY Math Challenge Flyer">CUNY Math Challenge Flyer</a>.<br>
-2016-01-27: There will be a student ambassador from the Dolciani Mathematics Learning Center sometime in the beginning of the semester, and introduce about the center for about five minutes. Please welcome him/her and have interest.<br>
-2016-01-27: Check out <FONT COLOR="red">Homework #1</FONT> below.<br>
--->
-2019-12-23: Letter grades have been submitted. Happy Holidays!<br>
+2019-12-23: Letter grades has been submitted. Happy Holidays!<br>
 2019-12-07: The course evaluation deadline has been extended to next Friday, 13th December. Please participate! <a href="f2019_ge/courseeval2extended.pdf" title="Open Course Evaluation Deadline Extension">Announcement</a>.<br>
 2019-12-05: Please participate in course evaluation this week. Please read the <a href="f2019_dg2/courseeval2.pdf" title="Open Course Evaluation Announcement">announcement</a>.<br>
 2019-12-05: The recorded video of your mock teaching has sent via Google Drive link.<br>
@@ -74,27 +36,36 @@
 2019-09-15: Solutions to <FONT COLOR="red">Quiz #2</FONT> has been posted on CBNU eCampus. Also find a note on "When can you use Dupin's indicatrix and when cannot? If not, how can you find principal directions?" A post on National Exam related FAQ is also available. We will learn more about Gauss-Bonnet theorem during Week 3, and a note on that will be posted after we finish our discussion.<br>
 2019-09-15: Solutions to <FONT COLOR="red">Quiz #1</FONT> has been moved to <a href="https://cbnu.blackboard.com/"  title="Open CBNU eCampus">CBNU eCampus</a>.<br>
 2019-09-08: Solutions to <FONT COLOR="red">Quiz #1</FONT> has been posted below.<br>
+
+
+-->
+
 2019-09-01: Welcome!<br>
 
 
 <h2><p>Weekly Quizzes</p></h2>
 For Problems and Solutions to Weekly Quizzes, go to <a href="https://cbnu.blackboard.com/"  title="Open CBNU eCampus">CBNU eCampus</a> (a.k.a. Blackboard)<br><br>
-<b>Quiz 1</b> on September 4th.<br>
-<b>Quiz 2</b> on September 11th.<br>
-<b>Quiz 3</b> on September 18th.<br>
-<b>Quiz 4</b> on September 25th.<br>
-<b>Quiz 5</b> on October 2nd.<br>
-<b>Quiz 6</b> on October 10th.<br>
-<b>Quiz 7</b> on October 16th.<br>
-<b>Quiz 8</b> on October 23th.<br>
-<b>Quiz 9</b> on October 30th.<br>
-<b>Quiz 10</b> on November 7th.<br>
-<b>Quiz 11</b> on November 13th.<br>
-<b>Quiz 12</b> on November 20th.<br>
+<b>Quiz 1</b> on September 1st.<br>
+<b>Quiz 2</b> on September 8th.<br>
+<b>Quiz 3</b> on September 15th.<br>
+<b>Quiz 4</b> on September 22nd.<br>
+<b>Quiz 5</b> on September 29th.<br>
+<b>Quiz 6</b> on October 6th.<br>
+<b>Quiz 7</b> on October 13th.<br>
+<b>Quiz 8</b> on October 20th.<br>
+<b>Quiz 9</b> on October 27th.<br>
+<b>Quiz 10</b> on November 3rd.<br>
+<b>Quiz 11</b> on November 10th.<br>
+<b>Quiz 12</b> on November 17th.<br>
+<b>Quiz 13</b> on November 24th.<br>
+<b>Quiz 14</b> on December 1st.<br>
+<b>Quiz 15</b> on December 8th.<br>
 <br>
 
 
 <h2><p>List of advanced topics in geometry</p></h2>
+Depending on Corona-19 pandemic situation, we may meet in class and individually study some advanced topics from geometry.<br><br>
+<!-- 
 Nearing the end of the semester (Weeks 13, 14, and 15), you are expected to be able to to one of the following:
 <ul>
   <li> A statement and a proof of Stokes' theorem using differential forms</li>
@@ -102,8 +73,8 @@ Nearing the end of the semester (Weeks 13, 14, and 15), you are expected to be a
   <li> A proof of the theorem of Morse</li>
   <li> Lie groups, Lie algebras, and adjoint representations</li>
   <li> Weekly mock teaching practice. Three topics from middle and high school geometry of your choice. For each topic, you will give a 20-minute long mock lecture in each week. Your lecture will be video-recorded and openly discussed in class. After that the recorded video file will be deleted of course.</li>
- </ul>
-<br>
+ </ul>-->
+
 
 
 
@@ -163,16 +134,9 @@ In coming Spring 2016, I will be teaching <b>MATH250-02: Calculus with Analytic 
 
 
 <h2><p>Links</p></h2>
-<a href="http://newton.kias.re.kr/~byungdo">Webpage of Byungdo Park</a><br>
+<a href="https://byungdo.github.io/">Webpage of Byungdo Park</a><br>
 <a href="http://edu.chungbuk.ac.kr/mathedu/index.do">CBNU Mathematics Education Department Homepage</a><br>
 <br><br>
-
-<!-- MATH 255 Vector Analysis
-MATH 301 Mathematical Methods for the Physical Sciences
-MATH 351 Mathematical Analysis I
-MATH 260 Linear Algebra -->
-
-
 
 
 
