--- a/teaching/f2019_dg2.html
+++ b/teaching/f2019_dg2.html
@@ -59,9 +59,7 @@
 2016-01-27: There will be a student ambassador from the Dolciani Mathematics Learning Center sometime in the beginning of the semester, and introduce about the center for about five minutes. Please welcome him/her and have interest.<br>
 2016-01-27: Check out <FONT COLOR="red">Homework #1</FONT> below.<br>
 -->
-
-2019-12-23: Letter grades have been submitted. Enjoy your winter break.<br>
-2019-12-23: Your final exam papers are graded and solutions have been posted. Please also find other relevant information therein such as average or other statistical data. You are welcome to visit my office to pick up your graded paper. You will have to sign upon receipt.<br>
+2019-12-23: Letter grades have been submitted. Happy Holidays!<br>
 2019-12-07: The course evaluation deadline has been extended to next Friday, 13th December. Please participate! <a href="f2019_ge/courseeval2extended.pdf" title="Open Course Evaluation Deadline Extension">Announcement</a>.<br>
 2019-12-06: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>
 2019-12-05: <FONT COLOR="red">Homework #6, #7, #8</FONT> have been posted below. No need to hand-in Homework #8<br>
@@ -133,9 +131,7 @@ Here is the <a href="f2019_dg2/midterm.pdf"  title="Open Midterm Exam">Problems<
 
 Final Exam: <FONT COLOR="#C40062">16 December (Monday),</FONT> at E1-2 Room 306, 14:00--16:00.<br>
 - Coverage: Chapters 8, 9, 10, and 11. In Chapters 10 and 11, only those sections we covered in class will be included to the coverage.<br>
-- Total 8 questions. There will be one True/False question (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.), and 4 questions which are identical or related to homework problems, and 3 question from the old national exam problems or mock test problems (See the attached PDF for Homeworks #4, #7.<br>
-Here are <a href="f2019_dg2/final.pdf"  title="Open final Exam">Problems</a> and <a href="f2019_dg2/finalsol.pdf"  title="Open Final Exam Solution">Solutions</a>. The average was 40.51, standard deviation 20.06, and the maximum score achieved by a student 80.<br>
-- If you think you did not get a final grade you deserve, you are welcome to dispute. Please remember that the correction request has to be filed no later that 30 December 2019.<br><br>
+- Total 8 questions. There will be one True/False question (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.), and 4 questions which are identical or related to homework problems, and 3 question from the old national exam problems or mock test problems (See the attached PDF for Homeworks #4, #7.<br><br>
 
 <h2><p>Make-up announcement</p></h2>
 Due to the teaching observation practice of most of students, we do not meet during the period 28 October -- 08 November. Instead, we shall have six one-hour long make-up classes. Location is TBA.<br>
