--- a/teaching/f2019_geom2.html
+++ b/teaching/f2019_geom2.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<title> Geometry for teachers 2 </title>
+<title> Geometry for teachers II </title>
 </head>
 <font face="Times New Roman">
 <body>
-<h1><p align="center">Geometry for teachers 2</p></h1>
+<h1><p align="center">Geometry for teachers II</p></h1>
 <h3><p align="center">Course 7412075 Section 01, Fall 2019</p></h3>
 <h3><p align="center">Mondays 10:00 - 11:50, Tuesdays 10:00 - 10:50, Room: E1-1 #140</p></h3>
 <h3><p align="center">Chungbuk National University</p></h3>
@@ -59,9 +59,7 @@
 2016-01-27: There will be a student ambassador from the Dolciani Mathematics Learning Center sometime in the beginning of the semester, and introduce about the center for about five minutes. Please welcome him/her and have interest.<br>
 2016-01-27: Check out <FONT COLOR="red">Homework #1</FONT> below.<br>
 -->
-
-2019-12-23: Letter grades have been submitted. Enjoy your winter break.<br>
-2019-12-23: Your final exam papers are graded and solutions have been posted. Please also find other relevant information therein such as average or other statistical data. You are welcome to visit my office to pick up your graded paper. You will have to sign upon receipt.<br>
+2019-12-23: Letter grades have been submitted. Happy Holidays!<br>
 2019-12-07: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>
 2019-12-07: Check out <FONT COLOR="red">Homework #10</FONT> below.<br>
 2019-12-07: The course evaluation deadline has been extended to next Friday, 13th December. Please participate! <a href="f2019_ge/courseeval2extended.pdf" title="Open Course Evaluation Deadline Extension">Announcement</a>.<br>
@@ -148,10 +146,7 @@ Here are <a href="f2019_geom2/midterm.pdf"  title="Open Midterm Exam">Problems</
 Final Exam: <FONT COLOR="#C40062">16 December (Monday),</FONT> In-class.<br>
 - Coverage: Chapters 1, 2, 3, 4, 5, and 6 (only those sections covered in class).<br>
 - Total 8 questions. The style and focus of the exam will be similar to the midterm exam. Chapters 1, 2, and 3 will be only indirectly covered in this exam to the extent that the exam assumes everything we studied together in this course. Exam problems will be mostly from those materials we studied after the midterm exam.<br>
-Here are <a href="f2019_geom2/final.pdf"  title="Open final Exam">Problems</a> and <a href="f2019_geom2/finalsol.pdf"  title="Open Final Exam Solution">Solutions</a>. The average was 58.57 and the maximum score achieved by a student was 90.<br>
-- If you think you did not get a final grade you deserve, you are welcome to dispute. Please remember that the correction request has to be filed no later that 30 December 2019.<br>
-<br>
-
+<br><br>
 
 <h2><p>Group activity</p></h2>
 
