--- a/index.html
+++ b/index.html
@@ -80,6 +80,17 @@ Contemp. Math.</a></em> <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/abs
 
 <h2><p>Teaching</p></h2>
 <dl>
+<dd><a href="teaching/f2020_ge.html">Geometry and Education</a></dd>
+<dd><a href="teaching/f2020_dg2.html">Differential Geometry II</a></dd>
+<dd><a href="teaching/f2020_geom2.html">Geometry for Teachers II</a></dd>
+</dl>
+<ul>
+  <li><a href="teaching/pastcourses.html">Past courses</a></li>
+</ul>
+
+
+<!--
+<dl>
 <dd><a href="teaching/s2020_fom1.html">Foundation of Mathematics I</a> (Graduate Course)</dd>
 <dd><a href="teaching/s2020_tig1.html">Topics in Geometry I</a> (Graduate Course)</dd>
 <dd><a href="teaching/s2020_dg1.html">Differential Geometry I</a></dd>
@@ -88,9 +99,7 @@ Contemp. Math.</a></em> <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/abs
 <ul>
   <li><a href="teaching/pastcourses.html">Past courses</a></li>
 </ul>
-
-
-
+ -->
 
 
 <h2><p>Selected talks and slides</p></h2>
@@ -182,7 +191,7 @@ Contemp. Math.</a></em> <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/abs
 <!--
 <a href="4214-06/4214-06.html">4214-06</a><br><br>-->
 
-Last Updated: 18 March 2020
+Last Updated: 27 August 2020
 
 </font>
 </body>
